# go-ipld-linkstore/BUILD.bazel

load("@io_bazel_rules_go//go:def.bzl", "go_embed_data", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/proofzero/go-ipld-linkstore
# gazelle:proto disable
gazelle(name = "gazelle")

go_library(
    name = "linkstore",
    srcs = ["linkstore.go"],
    importpath = "github.com/proofzero/go-ipld-linkstore",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ipfs_go_block_format//:go-block-format",
        "@com_github_ipfs_go_cid//:go-cid",
        "@com_github_ipld_go_car//:go-car",
        "@com_github_ipld_go_ipld_prime_v12//:go-ipld-prime",
        "@com_github_ipld_go_ipld_prime_v12//linking",
        "@com_github_ipld_go_ipld_prime_v12//linking/cid",
        "@com_github_ipld_go_ipld_prime_v12//storage",
    ],
)

go_test(
    name = "linkstore_test",
    srcs = ["linkstore.go", "example_test.go"],
    deps = [
        "@com_github_ipfs_go_block_format//:go-block-format",
        "@com_github_ipfs_go_cid//:go-cid",
        "@com_github_ipld_go_car//:go-car",
        "@com_github_ipld_go_car_v2//:go-car",
        "@com_github_ipld_go_ipld_prime_v12//:go-ipld-prime",
        "@com_github_ipld_go_ipld_prime_v12//codec/dagcbor",
        "@com_github_ipld_go_ipld_prime_v12//datamodel",
        "@com_github_ipld_go_ipld_prime_v12//fluent",
        "@com_github_ipld_go_ipld_prime_v12//linking",
        "@com_github_ipld_go_ipld_prime_v12//linking/cid",
        "@com_github_ipld_go_ipld_prime_v12//node/basicnode",
        "@com_github_ipld_go_ipld_prime_v12//traversal/selector",
        "@com_github_ipld_go_ipld_prime_v12//traversal/selector/builder",
        "@com_github_ipld_go_ipld_prime_v12//storage",
        "@com_github_multiformats_go_multicodec//:go-multicodec",
        "@com_github_warpfork_go_wish//:go-wish",
    ],
)
